<resources>
    <string name="app_name">Calculator</string>
    <string name="numeral_0">0</string>
    <string name="numeral_1">1</string>
    <string name="numeral_2">2</string>
    <string name="numeral_3">3</string>
    <string name="numeral_4">4</string>
    <string name="numeral_5">5</string>
    <string name="numeral_6">6</string>
    <string name="numeral_7">7</string>
    <string name="numeral_8">8</string>
    <string name="numeral_9">9</string>
    <string name="numeral_decimal">.</string>
    <string name="numeral_plus">+</string>
    <string name="numeral_minus">-</string>
    <string name="numeral_multiply">×</string>
    <string name="numeral_divide">÷</string>
    <string name="numeral_equals">=</string>
    <string name="numeral_clear">AC</string>
    <string name="numeral_backspace">⌫</string>
    <string name="all">A</string>
    <string name="save">MS</string>
    <string name="recall">MR</string>
    <string name="error">Error</string>

</resources>